--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-11 Tue 23:47]
+#+CAPTION: Clock summary at [2016-10-12 Wed 00:30]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *19:10* |       |       | 100.0 |
+| *Total time*                                                                | *19:52* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 19:10   |       |       | 100.0 |
-| Active                                                                      |         | 19:10 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.7 |
-| COMPLETED Improve bintray support                                           |         |       |  0:26 |   2.3 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   6.7 |
+| Stories                                                                     | 19:52   |       |       | 100.0 |
+| Active                                                                      |         | 19:52 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.6 |
+| COMPLETED Improve bintray support                                           |         |       |  0:26 |   2.2 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   6.5 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.4 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  21.0 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.6 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   6.2 |
-| STARTED Clean up terminology in dynamic                                     |         |       | 11:11 |  58.3 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  20.2 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.5 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   6.0 |
+| STARTED Clean up terminology in dynamic                                     |         |       | 11:53 |  59.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,7 @@ There were a couple of instances left out in the configuration
 refactor, in yarn.
 
 *** STARTED Clean up terminology in dynamic                           :story:
+    CLOCK: [2016-10-11 Tue 23:48]--[2016-10-12 Wed 00:30] =>  0:42
     CLOCK: [2016-10-11 Tue 22:38]--[2016-10-11 Tue 23:47] =>  1:09
     CLOCK: [2016-10-11 Tue 22:29]--[2016-10-11 Tue 22:37] =>  0:08
     CLOCK: [2016-10-11 Tue 20:44]--[2016-10-11 Tue 22:28] =>  1:44
