--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-12 Wed 10:18]
+#+CAPTION: Clock summary at [2016-10-12 Wed 10:28]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *21:45* |       |       | 100.0 |
+| *Total time*                                                                | *21:54* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 21:45   |       |       | 100.0 |
-| Active                                                                      |         | 21:45 |       | 100.0 |
+| Stories                                                                     | 21:54   |       |       | 100.0 |
+| Active                                                                      |         | 21:54 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.4 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   2.0 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   5.9 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.4 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  18.5 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  18.3 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.4 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   5.4 |
-| STARTED Clean up terminology in dynamic                                     |         |       | 13:46 |  63.3 |
+| STARTED Clean up terminology in dynamic                                     |         |       | 13:55 |  63.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,7 @@ There were a couple of instances left out in the configuration
 refactor, in yarn.
 
 *** STARTED Clean up terminology in dynamic                           :story:
+    CLOCK: [2016-10-12 Wed 10:19]--[2016-10-12 Wed 10:28] =>  0:09
     CLOCK: [2016-10-12 Wed 10:14]--[2016-10-12 Wed 10:18] =>  0:04
     CLOCK: [2016-10-12 Wed 09:53]--[2016-10-12 Wed 10:13] =>  0:20
     CLOCK: [2016-10-12 Wed 09:46]--[2016-10-12 Wed 09:52] =>  0:06
