--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-12 Wed 10:38]
+#+CAPTION: Clock summary at [2016-10-12 Wed 12:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *22:03* |       |       | 100.0 |
+| *Total time*                                                                | *23:03* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 22:03   |       |       | 100.0 |
-| Active                                                                      |         | 22:03 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.7 |
+| Stories                                                                     | 23:03   |       |       | 100.0 |
+| Active                                                                      |         | 23:03 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.4 |
-| COMPLETED Improve bintray support                                           |         |       |  0:26 |   2.0 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   5.8 |
+| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.9 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   5.6 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.4 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  18.2 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.4 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   5.4 |
-| STARTED Clean up terminology in dynamic                                     |         |       | 14:04 |  63.8 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  17.4 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.3 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   5.1 |
+| STARTED Clean up terminology in dynamic                                     |         |       | 15:04 |  65.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,8 @@ There were a couple of instances left out in the configuration
 refactor, in yarn.
 
 *** STARTED Clean up terminology in dynamic                           :story:
+    CLOCK: [2016-10-12 Wed 11:30]--[2016-10-12 Wed 12:00] =>  0:30
+    CLOCK: [2016-10-12 Wed 10:39]--[2016-10-12 Wed 11:09] =>  0:30
     CLOCK: [2016-10-12 Wed 10:29]--[2016-10-12 Wed 10:38] =>  0:09
     CLOCK: [2016-10-12 Wed 10:19]--[2016-10-12 Wed 10:28] =>  0:09
     CLOCK: [2016-10-12 Wed 10:14]--[2016-10-12 Wed 10:18] =>  0:04
