--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-12 Wed 12:00]
+#+CAPTION: Clock summary at [2016-10-12 Wed 12:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *23:03* |       |       | 100.0 |
+| *Total time*                                                                | *23:06* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 23:03   |       |       | 100.0 |
-| Active                                                                      |         | 23:03 |       | 100.0 |
+| Stories                                                                     | 23:06   |       |       | 100.0 |
+| Active                                                                      |         | 23:06 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.4 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.9 |
@@ -30,7 +30,7 @@
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  17.4 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.3 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   5.1 |
-| STARTED Clean up terminology in dynamic                                     |         |       | 15:04 |  65.4 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:07 |  65.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -157,7 +157,9 @@ configuration.
 There were a couple of instances left out in the configuration
 refactor, in yarn.
 
-*** STARTED Clean up terminology in dynamic                           :story:
+*** COMPLETED Clean up terminology in dynamic                         :story:
+    CLOSED: [2016-10-12 Wed 12:04]
+    CLOCK: [2016-10-12 Wed 12:01]--[2016-10-12 Wed 12:04] =>  0:03
     CLOCK: [2016-10-12 Wed 11:30]--[2016-10-12 Wed 12:00] =>  0:30
     CLOCK: [2016-10-12 Wed 10:39]--[2016-10-12 Wed 11:09] =>  0:30
     CLOCK: [2016-10-12 Wed 10:29]--[2016-10-12 Wed 10:38] =>  0:09
@@ -228,15 +230,12 @@ Done:
 - json_hydrator -> type_hydrator
 - repository workflow: merge repository factory, repository workflow,
   hydration workflow into a type repository factory.
-
-To do:
-
 - field instance definition -> entry type.
 - field definition -> split into type and type template. JSON file can
   contain both. Add some kind of meta-data to figure out the type.
 - field definition types: template types
 - scopes: remove unused scopes. Rest of the scopes should be root,
-  top-level, child (avoid references to yarn concepts).
+  top-level, child (avoid references to yarn concepts). All in use.
 
 Large renames:
 
@@ -244,6 +243,11 @@ Large renames:
 - repository -> type repository
 - repository selector -> type repository selector
 - workflow -> type repository workflow
+
+Sound on compilations:
+
+: && ogg123 -q  /usr/share/sounds/gnome/default/alerts/glass.ogg
+: || ogg123 -q  /usr/share/sounds/gnome/default/alerts/drip.ogg
 
 *** Registrar in quilt is not being generated                         :story:
 
