--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-12 Wed 12:04]
+#+CAPTION: Clock summary at [2016-10-12 Wed 12:35]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *23:06* |       |       | 100.0 |
+| *Total time*                                                                | *23:26* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 23:06   |       |       | 100.0 |
-| Active                                                                      |         | 23:06 |       | 100.0 |
+| Stories                                                                     | 23:26   |       |       | 100.0 |
+| Active                                                                      |         | 23:26 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.4 |
-| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.9 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   5.6 |
+| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.8 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   5.5 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.4 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  17.4 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  17.1 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.3 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   5.1 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:07 |  65.4 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   5.0 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  64.9 |
+| STARTED Rewrite profile support                                             |         |       |  0:15 |   1.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -159,6 +160,7 @@ refactor, in yarn.
 
 *** COMPLETED Clean up terminology in dynamic                         :story:
     CLOSED: [2016-10-12 Wed 12:04]
+    CLOCK: [2016-10-12 Wed 12:30]--[2016-10-12 Wed 12:35] =>  0:05
     CLOCK: [2016-10-12 Wed 12:01]--[2016-10-12 Wed 12:04] =>  0:03
     CLOCK: [2016-10-12 Wed 11:30]--[2016-10-12 Wed 12:00] =>  0:30
     CLOCK: [2016-10-12 Wed 10:39]--[2016-10-12 Wed 11:09] =>  0:30
@@ -248,6 +250,29 @@ Sound on compilations:
 
 : && ogg123 -q  /usr/share/sounds/gnome/default/alerts/glass.ogg
 : || ogg123 -q  /usr/share/sounds/gnome/default/alerts/drip.ogg
+
+*** STARTED Rewrite profile support                                   :story:
+    CLOCK: [2016-10-12 Wed 12:15]--[2016-10-12 Wed 12:30] =>  0:20
+
+Our first stab at implementing profiles was a valiant effort but sadly
+it was not the right approach. Profiles need to be implemented
+directly into dynamic, and they must be totally transparent to the
+layers above.
+
+The profile structure is very similar to what we did in v1, but we
+must implement it in terms of dynamic infrastructure:
+
+- we need to make use of dynamic templates to expand facets and
+  formatters, and to refer to instances;
+
+Tasks:
+
+- implement all of the new dynamic classes
+- remove profiles in quilt.cpp and ensure the code works with the
+  profile expansion. Update models to make use of global profiles.
+- we need to supply a list of stereotypes to dynamic workflow, against
+  the id's that have them. If we can find a profile with the
+  stereotype name, apply it.
 
 *** Registrar in quilt is not being generated                         :story:
 
@@ -358,28 +383,6 @@ Note: we don't need to do leaf management:
 We just need to enable/disable serialisation and the code will work.
 
 - add a stereotype of handcrafted with a default profile.
-
-*** Rewrite profile support                                           :story:
-
-Our first stab at implementing profiles was a valiant effort but sadly
-it was not the right approach. Profiles need to be implemented
-directly into dynamic, and they must be totally transparent to the
-layers above.
-
-The profile structure is very similar to what we did in v1, but we
-must implement it in terms of dynamic infrastructure:
-
-- we need to make use of dynamic templates to expand facets and
-  formatters, and to refer to instances;
-
-Tasks:
-
-- implement all of the new dynamic classes
-- remove profiles in quilt.cpp and ensure the code works with the
-  profile expansion. Update models to make use of global profiles.
-- we need to supply a list of stereotypes to dynamic workflow, against
-  the id's that have them. If we can find a profile with the
-  stereotype name, apply it.
 
 *** Generate formatter interfaces                                      :epic:
 
